# wd-tagger-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  compose.yml
.cargo/: config.toml
docker/: Dockerfile.cuda
src/: config.rs  error.rs  file.rs  lib.rs  main.rs  pipeline.rs  processor.rs  tagger.rs  tags.rs
src/cli/: args.rs  file.rs  main.rs
