[package]
name = "wd-tagger"
version = "0.1.0"
edition = "2021"

[lib]
name = "wdtagger"
path = "src/lib.rs"

[[bin]]
name = "tagger"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "cuda"]
cli = ["clap"]

load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]

[dependencies]
hf-hub = "0.3.2"
ort = { version = "2.0.0-rc.4" }
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
image = "0.25.2"
serde = "1.0.207"
serde_json = "1.0.125"
ndarray = "0.15"

clap = { version = "4.5.15", features = ["derive"], optional = true }
