[package]
name = "wd-tagger"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/p1atdev/wd-tagger-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "wdtagger"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tagger"
path = "src/cli/main.rs"
required-features = ["cli"]


[features]
default = ["cli"]
cli = ["clap", "tokio", "tokio-stream"]

cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]

[dependencies]
hf-hub = "0.3.2"
ort = { version = "2.0.0-rc.5" }
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
image = "0.25.2"
serde = "1.0.207"
serde_json = "1.0.125"
ndarray = { version = "0.16", features = ["rayon"] }
csv = "1.3.0"
itertools = "0.13.0"
indexmap = "2.4.0"

clap = { version = "4.5.15", features = ["derive"], optional = true }
tokio = { version = "1.40.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.15", optional = true }
futures = "0.3.30"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
lto = true
